RenderLayer::backgroundClipRect should not check parent() https://bugs.webkit.org/show_bug.cgi?id=73731

Reviewed by Simon Fraser.

Clean-up only, no expected change in behavior.

* rendering/RenderLayer.cpp:
(WebCore::backgroundClipRectForPosition): Changed RenderObject::isPositioned() to
a check for AbsolutePosition for consistency but also as this is equivalent due to:
- the previous check for FixedPosition.
- RenderView, which is positioned, will never goes to this code as it has no parent().

(WebCore::RenderLayer::backgroundClipRect): Removed the parent() check. While at
it, also moved the inline initialization of |backgroundClipRect| to its own function
and removed a |view| check as the associated ASSERT seems to never have been reached.


Canonical link: https://commits.webkit.org/92252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103955 268f45cc-cd09-0410-ab3c-d52691b4dbfc